--- a/src/styles/basics/_helpers.scss
+++ b/src/styles/basics/_helpers.scss
@@ -13,8 +13,16 @@
         justify-content: center;
     }
 
+    &.justify-flex-end {
+        justify-content: flex-end;
+    }
+
     &.space-between {
         justify-content: space-between;
+    }
+
+    &-grow {
+        flex-grow: 1;
     }
 }
 
@@ -24,6 +32,28 @@
     margin: 0;
 }
 
-.text-center {
-    text-align: center;
+.text- {
+    &center {
+        text-align: center;
+    }
+
+    &xl {
+        font-size: 26px;
+    }
+
+    &l {
+        font-size: 22px;
+    }
+
+    &s {
+        font-size: 14px;
+    }
+
+    &xs {
+        font-size: 12px;
+    }
+
+    &xxs {
+        font-size: 10px;
+    }
 }
