--- a/src/styles/setup/_vars.scss
+++ b/src/styles/setup/_vars.scss
@@ -1,4 +1,17 @@
 // COLORS:
+$font-clr-primary: #222222;
+$font-clr-secondary: #484848;
+$font-clr-light: #717171;
+
+$background-clr-default: white;
+$background-clr-secondary: #f7f7f7;
+$border-clr-default: #dddddd;
+
+$font-weight-default: 400;
+$font-weight-bold: 600;
+
+$font-family-default: Cereal, -apple-system, BlinkMacSystemFont, Roboto, Helvetica Neue, sans-serif;
+
 //exemple - remove:
 $clr-intro-email-su-bg: hsl(217, 28%, 15%);
 $clr-main-bg: hsl(218, 28%, 13%);
@@ -14,7 +27,15 @@ $clr-neutral: hsl(0, 0%, 100%);
 
 // VIEW BREAK POINTS:
 //exemple-remove:
-$mobile-width: 375px;
-$desktop-width: 1440px;
+$desktop-s: 743px; //layout changes to mobile
+$desktop-m: 950px; //Search bar in main header gets adjasted to logo
+$desktop-l: 1128px; //Text in logo disappears and main layout padding changes to 40px
+$max-content-width: 1760px;
 
 //OTHERS:
+
+$main-stay-list-grid-padding: 28px;
+$main-layout-padding-m: 40px;
+$main-layout-padding-l: 80px;
+
+// var AIRBNB_LAYOUT_INSIGHTS = [div.c14whb16.dir.dir-ltr, div.c1yfmptw.clu53zf.dir.dir-ltr, div.cdfwt5b.cgf6h58.dir.dir-ltr, div._le6wlg, div.mmnrvq0.dir.dir-ltr, div.atm_9s_1txwivl.atm_fc_1yb4nlp.atm_h_1h6ojuz.atm_lo_w1gvyb.atm_le_dlk8xv.atm_mj_1wugsn5.atm_j3_1htezdq.atm_gw_1wugsn5.atm_lj_ke7zzc.atm_li_ke7zzc.atm_8w_15dce1s.dir.dir-ltr]
