Completed main header style

--- a/src/styles/cmps/_stays-filter.scss
+++ b/src/styles/cmps/_stays-filter.scss
@@ -10,7 +10,7 @@
     }
 
     button {
-        height: 48px;
+        // height: 48px;
         background: transparent;
         border: none;
         padding: 0 16px;
