--- a/src/styles/setup/_typography.scss
+++ b/src/styles/setup/_typography.scss
@@ -1,3 +1,7 @@
+//All the fonts here need somekind of improvement becuase
+//these are not the exect fonts used in airbnb althogh they
+//are very simialer.
+
 @font-face {
     font-family: Cereal;
     src: url("../../assets/fonts/AirbnbCereal_W_Lt.otf");
