--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,5 +17,8 @@
 
 @import "./cmps/main-header";
 @import "./cmps/stays-filter";
+@import "./cmps/secondary-header";
+@import "./cmps/category-chip";
+@import "./cmps/category-list";
 
 // PAGES
