--- a/src/styles/setup/_vars.scss
+++ b/src/styles/setup/_vars.scss
@@ -2,6 +2,7 @@
 $brand-clr: #ff385c;
 
 $font-clr-primary: #222222;
+$font-clr-contrast: black;
 $font-clr-secondary: #484848;
 $font-clr-light: #717171;
 
