--- a/src/styles/cmps/_main-header.scss
+++ b/src/styles/cmps/_main-header.scss
@@ -17,7 +17,7 @@
         height: 100%;
         width: 100%;
         // top: 0;
-        // z-index: 0;
+        z-index: -1;
         // opacity: 0;
         // opacity: 1;
         // transition: transform 150ms ease, opacity 150ms ease 75ms;
