Code refactoring for category-list.scss

--- a/src/styles/cmps/_category-chip.scss
+++ b/src/styles/cmps/_category-chip.scss
@@ -18,6 +18,10 @@
         }
     }
 
+    .category-list &:first-child button {
+        min-width: 38.8px;
+    }
+
     div.category-name {
         position: relative;
 
