--- a/src/styles/cmps/_secondary-header.scss
+++ b/src/styles/cmps/_secondary-header.scss
@@ -7,6 +7,7 @@
 
         .category-list {
             margin-inline-end: 20px;
+            scroll-behavior: smooth;
         }
 
         .category-nav-btn {
