--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -20,5 +20,6 @@
 @import "./cmps/secondary-header";
 @import "./cmps/category-chip";
 @import "./cmps/category-list";
+@import "./cmps/main-footer-container";
 
 // PAGES
