--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -21,5 +21,6 @@
 @import "./cmps/category-chip";
 @import "./cmps/category-list";
 @import "./cmps/main-footer-container";
+@import "./cmps/main-footer";
 
 // PAGES
