--- a/src/styles/basics/_base.scss
+++ b/src/styles/basics/_base.scss
@@ -49,6 +49,7 @@ a {
     color: inherit;
     font-family: inherit;
     font-size: inherit;
+    font-weight: inherit;
     text-decoration: none;
     cursor: pointer;
 
@@ -56,7 +57,7 @@ a {
         font-weight: 600;
         background: transparent;
         border: 0;
-        cursor: pointer;
+        // cursor: pointer;
         // margin: 0;
         // padding: 0;
         // text-align: inherit;
