--- a/src/styles/cmps/_stays-filter.scss
+++ b/src/styles/cmps/_stays-filter.scss
@@ -35,7 +35,7 @@
         }
     }
 
-    span {
+    span.line-mark {
         width: 1px;
         height: 24px;
         background-color: $border-clr-default;
