--- a/src/styles/basics/_layout.scss
+++ b/src/styles/basics/_layout.scss
@@ -1,7 +1,11 @@
 .main-layout {
     max-width: $max-content-width;
-    padding-left: $main-layout-padding-m;
-    padding-right: $main-layout-padding-m;
+    padding-left: $main-layout-padding-s;
+    padding-right: $main-layout-padding-s;
+    @media (min-width: $desktop-s) {
+        padding-left: $main-layout-padding-m;
+        padding-right: $main-layout-padding-m;
+    }
     @media (min-width: $desktop-l) {
         padding-left: $main-layout-padding-l;
         padding-right: $main-layout-padding-l;
