--- a/src/styles/cmps/_stays-filter.scss
+++ b/src/styles/cmps/_stays-filter.scss
@@ -4,6 +4,7 @@
     border-radius: 40px;
     transition: box-shadow 0.2s ease;
     box-shadow: 0 1px 2px rgb(0 0 0 / 8%), 0 4px 12px rgb(0 0 0 / 5%);
+    margin: 0 24px;
 
     &:hover {
         box-shadow: $box-shadow-default;
@@ -31,6 +32,10 @@
                 padding: 10px;
                 background-color: $brand-clr;
                 color: $background-clr-default;
+
+                svg {
+                    width: 12px;
+                }
             }
         }
     }
@@ -39,5 +44,54 @@
         width: 1px;
         height: 24px;
         background-color: $border-clr-default;
+    }
+}
+
+.mobile-stays-filter {
+    min-height: 56px;
+    min-width: 285px;
+    border-radius: 1000px;
+    background: $background-clr-default;
+    border: 0.5px solid rgba(0, 0, 0, 0.08);
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+
+    .search-btn {
+        text-align: start;
+        min-width: 0;
+
+        .search-glass-svg-container {
+            padding: 0 16px 0 20px;
+
+            svg {
+                width: 16px;
+            }
+        }
+
+        div.text-xs {
+            color: $font-clr-light;
+            padding-inline-start: 2px;
+            min-width: 0;
+        }
+
+        div.text-s {
+            color: $font-clr-primary;
+            font-weight: 600;
+            line-height: 20px;
+        }
+
+        .dot-mark {
+            padding: 0 5px;
+        }
+    }
+
+    button.filter-btn {
+        div.circle-btn {
+            margin: 0 10px;
+            padding: 9px;
+
+            svg {
+                width: 16px;
+            }
+        }
     }
 }
