--- a/src/styles/cmps/_main-footer-container.scss
+++ b/src/styles/cmps/_main-footer-container.scss
@@ -4,12 +4,21 @@
     width: calc(100% - var(--scrollbar-gutter, 0%));
     z-index: 8;
     pointer-events: none;
+    transition: bottom 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955), visibility 0.2s;
+
+    &.hide-footer {
+        bottom: -65px;
+    }
 
     .map-btn-container {
-        margin-bottom: 40px;
+        margin-bottom: 24px;
         width: 100%;
         display: flex;
         justify-content: center;
+
+        @media (min-width: $desktop-s) {
+            margin-bottom: 40px;
+        }
 
         button {
             z-index: 8;
