--- a/src/styles/cmps/_main-footer.scss
+++ b/src/styles/cmps/_main-footer.scss
@@ -39,3 +39,61 @@
         }
     }
 }
+
+.mobile-main-footer {
+    border-top: 1px solid #ebebeb;
+    height: 65px;
+    background-color: $background-clr-default;
+    // transition: -ms-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),
+    //     -webkit-transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955),
+    //     transform 0.2s cubic-bezier(0.455, 0.03, 0.515, 0.955), visibility 0.2s;
+    z-index: 1;
+    pointer-events: auto;
+
+    div.container {
+        flex: 1 0 auto;
+        max-width: 560px;
+
+        a {
+            min-width: 0;
+            max-width: 20%;
+            padding: 0 2px;
+            flex: 1 1 0;
+
+            div.svg-container {
+                width: 30px;
+                height: 32px;
+                color: #b0b0b0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding-bottom: 2px;
+            }
+
+            div.text-xxs {
+                font-weight: 600;
+                line-height: 12px;
+                color: $font-clr-light;
+            }
+
+            &.active,
+            &:active {
+                div.svg-container {
+                    color: $brand-clr;
+                }
+            }
+
+            &.active {
+                div.text-xxs {
+                    color: $font-clr-primary;
+                }
+            }
+        }
+    }
+
+    .explore-nav-btn {
+        svg {
+            width: 24px;
+        }
+    }
+}
